# izumi-chibi-py

./: .gitignore  CLAUDE.md  README.md  advanced_demo.py  demo.py  pyproject.toml  pyrightconfig.json  scripts.py  test_advanced_distage.py  test_distage.py
.github/workflows/: ci.yml
demo/: advanced_demo.py  demo.py  example_new_api.py  lifecycle_demo.py  logger_injection_demo.py  named_dependencies_demo.py  roles_demo.py
distage_py/: __init__.py  activation.py  bindings.py  core.py  graph.py  introspection.py  resolver.py  roots.py
src/izumi/: __init__.py
src/izumi/distage/: __init__.py  activation_context.py  bindings.py  core.py  dsl.py  factory.py  functoid.py  graph.py  implementation.py  injector.py  introspection.py  keys.py  locator.py  locator_base.py  locator_impl.py  logger_injection.py  operations.py  plan.py  planner_input.py  resolver.py  roots.py
src/izumi/distage/model/: __init__.py  bindings.py  graph.py  keys.py  operations.py  plan.py
tests/: __init__.py  test_advanced_distage.py  test_algebraic_implementations.py  test_async.py  test_distage.py  test_factory_bindings.py  test_impls.py  test_lifecycle.py  test_locator.py  test_locator_inheritance.py  test_logger_injection.py  test_named_dependencies.py
